# libcrcfast

./: .gitignore  README.md  meson.build
include/: crcfast.h  meson.build
src/: crc32_generator82f63b78_ssse3_lut.h  crc32_generatoredb88320_ssse3_lut.h  crcfast.c  crcfastmain.c  meson.build
