# The libcrfast Project
project('libcrcfast', ['c'],
         license:                 'MIT',
         version:                 '0.0.0-0',
         meson_version:           '>=0.43.0',
         default_options:         ['c_std=gnu99',
                                   'warning_level=3',
                                   'buildtype=release',
                                   'strip=true',],)

# Subdirectories
subdir('include')
subdir('src')
